<resources>
    <string name="app_name">FourFun</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">首页</string>
    <string name="read">阅读</string>
    <string name="music">音乐</string>
    <string name="movie">电影</string>
    <string name="personal_center">个人中心</string>
    <string name="login_register">登录/注册</string>
    <string name="setting">设置</string>
    <string name="collection">收藏</string>
    <string name="submit">投稿</string>
    <string name="header_scrolling_behavior">com.joker.fourfun.widget.HeaderScrollingBehavior</string>
    <string name="header_float_behavior">com.joker.fourfun.widget.HeaderFloatBehavior</string>
    <string name="translation_login_fab_tag">transit_register</string>
    <string name="translation_picture_tag">transit_pic</string>
    <string name="please_enter_username">请输入用户名</string>
    <string name="enter_password">请输入密码</string>
    <string name="login">登录</string>
    <string name="forgot_your_password">忘了密码？</string>
    <string name="password">密码</string>
    <string name="register">注册</string>
    <string name="username">用户名</string>
    <string name="enter_username">请输入用户名</string>
    <string name="email">邮箱</string>
    <string name="enter_email">请输入邮箱</string>
    <string name="repeat_password">再输入一次密码</string>
    <string name="enter_repeat_password">请再输入一次密码</string>
    <string name="man_should_select">男孩子请勾选哦~</string>
    <string name="women_should_not_select">女孩子请不要勾这个~</string>
    <string name="email_error_message_tip">请输入正确邮箱格式</string>
    <string name="password_error_message_tip">密码不能为空</string>
    <string name="username_error_message_tip">用户名不能为空</string>
    <string name="repeat_error_message_tip">两次密码不相同</string>
    <string name="cancel_login">取消登录</string>
    <string name="auto_login_tip">自动登录小提示</string>
    <string name="register_success_auto_login">注册成功，是否选择登录？</string>
    <string name="yes">是</string>
    <string name="no">否</string>
    <string name="my_collection">我的收藏</string>
    <string name="recently_browse">最近浏览</string>
    <string name="personal_setting">个人设置</string>
    <string name="night_mode">日间模式</string>
</resources>
