<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.joker.fourfun.ui.fragment.RegisterFragment">

    <FrameLayout
        android:layout_width="320dp"
        android:layout_height="400dp"
        android:layout_centerInParent="true"
        android:paddingTop="70dp">

        <android.support.v7.widget.CardView
            android:id="@+id/cv_add"
            android:layout_width="match_parent"
            android:layout_height="320dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            app:cardBackgroundColor="#2ea67f"
            app:cardCornerRadius="6dp"
            app:cardElevation="3dp"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="50dp"
                    android:layout_marginTop="50dp"
                    android:text="@string/register"
                    android:textColor="#fff"
                    android:textSize="16sp"
                    android:textStyle="bold"/>

                <com.rengwuxian.materialedittext.MaterialEditText
                    style="@style/RegisterEditTextStyle"
                    android:hint="@string/enter_username"
                    app:met_floatingLabelText="@string/username"/>

                <com.rengwuxian.materialedittext.MaterialEditText
                    style="@style/RegisterEditTextStyle"
                    android:hint="@string/enter_email"
                    app:met_floatingLabelText="@string/email"/>

                <com.rengwuxian.materialedittext.MaterialEditText
                    style="@style/RegisterEditTextStyle"
                    android:hint="@string/enter_password"
                    app:met_floatingLabelText="@string/password"/>

                <com.rengwuxian.materialedittext.MaterialEditText
                    style="@style/RegisterEditTextStyle"
                    android:hint="@string/enter_repeat_password"
                    app:met_floatingLabelText="@string/repeat_password"/>

                <Button
                    android:id="@+id/bt_go"
                    android:layout_width="150dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/bt_shape_2"
                    android:stateListAnimator="@drawable/state_list_animator_z"
                    android:text="@string/register"
                    android:textColor="@color/green_login"/>

            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|top"
            android:src="@drawable/jelly_fish"
            android:transitionName="@string/translation_login_fab_tag"
            app:fabSize="normal"/>
    </FrameLayout>

</RelativeLayout>
