<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="380dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:layout_marginBottom="20dp"
    android:layout_marginTop="80dp"
    tools:context="com.joker.fourfun.ui.RegisterActivity">

    <android.support.v7.widget.CardView
        android:id="@+id/cv_add"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:paddingTop="20dp"
        app:cardBackgroundColor="@color/register_card_view_background"
        app:cardCornerRadius="6dp"
        app:cardElevation="3dp"
        app:cardUseCompatPadding="true"
        app:contentPaddingLeft="30dp"
        app:contentPaddingRight="30dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:text="@string/register"
                android:textColor="#fff"
                android:textSize="16sp"
                android:textStyle="bold"/>

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/et_register_username"
                style="@style/RegisterEditTextStyle"
                android:hint="@string/enter_username"
                app:met_floatingLabelText="@string/username"/>

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/et_register_email"
                style="@style/RegisterEditTextStyle"
                android:hint="@string/enter_email"
                app:met_floatingLabelText="@string/email"/>

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/et_register_password"
                style="@style/RegisterEditTextStyle"
                android:hint="@string/enter_password"
                android:inputType="textPassword"
                app:met_floatingLabelText="@string/password"/>

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/et_register_repeat_password"
                style="@style/RegisterEditTextStyle"
                android:hint="@string/enter_repeat_password"
                android:inputType="textPassword"
                app:met_floatingLabelText="@string/repeat_password"/>

            <TextView
                android:id="@+id/tv_sex"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/women_should_not_select"
                android:textColor="@color/register_primary_color"/>

            <com.cengalabs.flatui.views.FlatToggleButton
                android:id="@+id/ftb_sex"
                android:layout_width="70dp"
                android:layout_height="30dp"
                android:layout_marginTop="10dp"
                app:fl_cornerRadius="18dp"
                app:fl_space="14dp"
                app:fl_theme="@array/grass"/>

            <Button
                android:id="@+id/bt_register"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/register_btn_shape"
                android:stateListAnimator="@drawable/state_list_animator_z"
                android:text="@string/register"
                android:textColor="@color/login_title_view_decorate"/>
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|top"
        android:src="@drawable/jelly_fish"
        android:transitionName="@string/translation_login_fab_tag"
        app:fabSize="normal"/>
</FrameLayout>


