<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg"
    tools:context="com.joker.fourfun.ui.LoginActivity">

    <android.support.v7.widget.CardView
        android:id="@+id/cv_register"
        android:layout_width="@dimen/login_card_view_width"
        android:layout_height="@dimen/login_card_view_height"
        android:layout_centerInParent="true"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        app:cardCornerRadius="6dp"
        app:cardElevation="3dp"
        app:cardUseCompatPadding="true"
        app:contentPaddingLeft="30dp"
        app:contentPaddingRight="30dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_gravity="top|start"
                android:layout_marginTop="10dp">

                <View
                    android:layout_width="8dp"
                    android:layout_height="match_parent"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:background="@color/login_title_view_decorate"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="50dp"
                    android:layout_marginStart="50dp"
                    android:text="@string/login"
                    android:textColor="@color/login_title_color"
                    android:textSize="@dimen/login_title_text_size"
                    android:textStyle="bold"/>
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/et_login_username"
                    style="@style/LoginEditTextStyle"
                    android:hint="@string/please_enter_username"
                    app:met_floatingLabelText="@string/username"/>

                <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/et_login_password"
                    style="@style/LoginEditTextStyle"
                    android:hint="@string/enter_password"
                    android:inputType="textPassword"
                    app:met_floatingLabelText="@string/password"/>

                <Button
                    android:id="@+id/bt_login"
                    android:layout_width="150dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="25dp"
                    android:background="@drawable/login_btn_shape"
                    android:stateListAnimator="@drawable/state_list_animator_z"
                    android:text="@string/login"
                    android:textColor="@color/login_btn_text_color"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="5dp"
                    android:text="@string/forgot_your_password"
                    android:textColor="@color/login_default_text_view"
                    android:textSize="12sp"/>
            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@id/cv_register"
        android:layout_alignTop="@id/cv_register"
        android:layout_marginRight="-20dp"
        android:layout_marginTop="25dp"
        android:src="@drawable/jelly_fish"
        android:transitionName="@string/translation_login_fab_tag"
        app:fabSize="normal"/>

</RelativeLayout>