<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context="com.joker.fourfun.ui.fragment.LoginFragment">

    <android.support.v7.widget.CardView
        android:id="@+id/cv_register"
        android:layout_width="300dp"
        android:layout_height="500dp"
        android:layout_centerInParent="true"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        app:cardCornerRadius="6dp"
        app:cardElevation="3dp"
        app:cardUseCompatPadding="true"
        app:contentPaddingLeft="30dp"
        app:contentPaddingRight="30dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_gravity="top|start"
                android:layout_marginTop="10dp">

                <View
                    android:layout_width="8dp"
                    android:layout_height="match_parent"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:background="@color/green_login"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="50dp"
                    android:layout_marginStart="50dp"
                    android:text="@string/login"
                    android:textColor="#FFCC00"
                    android:textSize="18sp"
                    android:textStyle="bold"/>
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <com.rengwuxian.materialedittext.MaterialEditText
                    style="@style/LoginEditTextStyle"
                    android:hint="@string/enter_username_email"
                    app:met_floatingLabelText="@string/username_email"/>

                <com.rengwuxian.materialedittext.MaterialEditText
                    style="@style/LoginEditTextStyle"
                    android:hint="@string/enter_password"
                    app:met_floatingLabelText="@string/password"/>

                <Button
                    android:id="@+id/bt_go"
                    android:layout_width="150dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="25dp"
                    android:background="@drawable/bt_shape"
                    android:stateListAnimator="@drawable/state_list_animator_z"
                    android:text="@string/login"
                    android:textColor="#d3d3d3"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="5dp"
                    android:text="@string/forgot_your_password"
                    android:textColor="#9a9a9a"
                    android:textSize="12sp"/>
            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>


    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@id/cv_register"
        android:layout_alignTop="@id/cv_register"
        android:layout_marginRight="-20dp"
        android:layout_marginTop="25dp"
        android:src="@drawable/jelly_fish"
        android:transitionName="@string/translation_login_fab_tag"
        app:fabSize="normal"/>

</RelativeLayout>